removed conflict markers & changed form p opacity

--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@ form p {
   margin-bottom: 1rem;
   font-weight: 600;
   line-height: 1.5rem;
-  opacity: .85;
+  opacity: 0.85;
 }
   
 form a {
